<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="tma.inf.upol.loveckydenik.fragments.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="tma.inf.upol.loveckydenik.fragments.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/listFragment"
        android:name="tma.inf.upol.loveckydenik.fragments.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="tma.inf.upol.loveckydenik.fragments.CalendarFragment"
        android:label="@string/calendar_fragment_label"
        tools:layout="@layout/fragment_calendar" />
</navigation>