<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/user_dialog_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_information_dialog_hunter_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hunter_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_information_dialog_hunter_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_information_dialog_hunter_email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/user_email_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_information_dialog_hunter_name_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_information_dialog_hunter_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_information_edit_dialog_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel_text"
        app:layout_constraintEnd_toStartOf="@+id/user_information_edit_dialog_edit_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_information_dialog_hunter_email_til" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_information_edit_dialog_edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_information_edit_dialog_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/user_information_edit_dialog_cancel_button" />


</androidx.constraintlayout.widget.ConstraintLayout>