<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEventActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/event_name_hint"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_note_length"
        app:errorEnabled="true"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/top_line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/picker_layout"
        app:layout_constraintTop_toBottomOf="@id/event_name_til" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/picker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_line_separator">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="24dp"
            android:drawableTint="@color/text_color"
            android:text="@string/event_time_all_day_info"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/picker_layout" />

        <Switch
            android:id="@+id/all_day_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ending_date_tv"
            app:layout_constraintStart_toEndOf="@+id/starting_date_tv"
            app:layout_constraintTop_toTopOf="@+id/starting_date_tv" />

        <TextView
            android:id="@+id/starting_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/ending_date_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

        <TextView
            android:id="@+id/ending_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/starting_date_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/starting_date_tv" />

        <TextView
            android:id="@+id/starting_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/starting_date_tv"
            app:layout_constraintStart_toStartOf="@+id/starting_date_tv"
            app:layout_constraintTop_toBottomOf="@+id/starting_date_tv" />

        <TextView
            android:id="@+id/ending_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/starting_time_tv"
            app:layout_constraintEnd_toEndOf="@+id/ending_date_tv"
            app:layout_constraintStart_toStartOf="@+id/ending_date_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picker_layout" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_text"
        app:cornerRadius="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel_text"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_text"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>