<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".fragments.HomeFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profil_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/background_color"
        app:strokeColor="@color/adapter_selector_color"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gun_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/color_primary"
                android:src="@drawable/ic_gun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_on_primary" />

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_user_profil_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gun_image"
                app:tint="@color/color_primary" />

            <TextView
                android:id="@+id/hunter_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/hunter_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_icon" />

            <TextView
                android:id="@+id/hunter_email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/hunter_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hunter_name_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coming_events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/space"
        android:layout_below="@id/profil_card_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_background"
        android:padding="16dp" />

    <TextView
        android:id="@+id/no_coming_events_info_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/profil_card_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/space"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:text="@string/no_coming_events_text"
        android:textColor="@color/secondary_text_color"
        android:visibility="gone" />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>